# gh-tracker

./: .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
.claude/: settings.json
.claude/commands/: commands
.github/workflows/: ci.yml
backend/: gh-tracker-collect.service  gh-tracker-collect.timer  pyproject.toml  run.py
backend/app/: collector.py  database.py  main.py  server_config.py
backend/tests/: test_admin.py  test_api.py  test_bot_detection.py  test_branch_protection.py  test_citations.py  test_collector.py  test_community_health.py  test_competitive_intel.py  test_enrichment.py  test_export.py  test_graphql_collector.py  test_port_config.py  test_pr_center.py  test_release_downloads.py  test_repo_management.py  test_repo_navigation.py  test_repo_settings.py  test_repo_statistics.py  test_security_alerts.py  test_social_mentions.py  test_swagger_docs.py  test_webhook.py  test_workflow_runs.py
frontend/src/: App.tsx
frontend/src/components/: ActivityFeed.tsx  BotDetectionBadge.tsx  BranchList.tsx  CodeFrequencyChart.tsx  CommitHeatmap.tsx  EnrichmentBadges.tsx  LanguageChart.tsx  PRCenter.tsx  ReleasesPanel.tsx  RepoOverview.tsx  SecurityAlerts.tsx  SocialMentionsPanel.tsx  VisitorsTable.tsx  WorkflowRuns.tsx
